# awesome_leg

./: CMakeLists.txt  README.md  package.xml
config/: README.md  actuators.yaml  actuators_old.yaml  awesome_leg_cartesian_interface.yaml  awesome_leg_horizon_gazebo_cosim.yaml  awesome_leg_xbot2.yaml  base_est_monitor.xml  base_est_monitor_iq_meas.xml  base_est_monitor_iq_model.xml  base_est_monitor_robot.xml  cartesian_interface.yaml  cartesio_acc_cntrl_rt.yaml  cartesio_cntrl_rt.yaml  cartesio_imp_cntrl_rt.yaml  cartesio_imp_cntrl_v2_rt.yaml  cartesio_p2p_rt.yaml  contact_est_plotjuggler.xml  cyclic_test.yaml  dynamic_cntrl_cartesio.yaml  fixed_hip_cartesio.yaml  fixed_hip_dyn_cntrl_cartesio.yaml  grav_comp_cartesio.yaml  gravity_compensation.yaml  horizon_gazebo_cosim.yaml  horizon_jump.yaml  horizon_jumpv2.yaml  horizon_solver.yaml  horizon_trot.yaml  horizon_trot_fixed_hip.yaml  horizon_trot_sliding_all.yaml  horizon_trot_sliding_all_underact.yaml  horizon_trot_sliding_hip.yaml  horizon_xbot_cmd_pub.yaml  inertial_identification_dynamic.yaml  inertial_identification_static.yaml  initial_pos.yaml  iq_calib_data_plotjuggler.xml  log_plotter.yaml  meas_reg_pow_monitor.xml  reg_pow_iq_meas_VS_model.xml  (+11 more)
description/: README.md
launch/: README.md  awesome_leg_cartesian_interface.launch  awesome_leg_gazebo.launch  awesome_leg_horizon_gazebo_cosim.launch  awesome_leg_horizon_rviz.launch  awesome_leg_load_params.launch  awesome_leg_rviz_standalone.launch  cartesio.launch  cartesio_imp_cntrl_marker.launch  cyclic_pos_pub_test.launch  dynamic_cntrl_cartesio.launch  fixed_hip_cartesio.launch  fixed_hip_dyn_cntrl_cartesio.launch  fixed_hip_reduced_URDF_cartesio.launch  gazebo.launch  gravity_compensation.launch  horizon_cyclic_pos_pub_test.launch  horizon_gazebo.launch  horizon_gazebo_cosim.launch  horizon_plot.launch  horizon_plotter.launch  horizon_pub.launch  horizon_pub_standalone.launch  horizon_pub_test.launch  horizon_resampler.launch  horizon_rviz.launch  horizon_solver.launch  horizon_xbot_cmd_pub.launch  horizon_xbot_cmd_pub_standalone.launch  inertial_identification_dynamic.launch  inertial_identification_static.launch  initial_pos_xbot_pub.launch  load_params.launch  log_plot.launch  robot_state_log_plotter.launch  robot_state_logger.launch  rviz_standalone.launch  rviz_standalone_Pinocchio_model.launch  rviz_standalone_RBDL_model.launch  rviz_standalone_complete.launch  (+2 more)
media/: README.md
msg/: BaseEstStatus.msg  ContactEstStatus.msg  EllTrajRt.msg  EstRegPowStatus.msg  (+13 more)
src/xbot2_cartesio_cntrl/: CMakeLists.txt
src/xbot2_cartesio_cntrl/include/: cartesio_cntrl_rt.h
src/xbot2_cartesio_cntrl/src/: cartesio_cntrl_rt.cpp
src/xbot2_imp_cntrl/: CMakeLists.txt
src/xbot2_imp_cntrl/include/: bypass_dsp.h  cartesio_ell_config_rt.h  cartesio_ell_rt.h  cartesio_elliptical_rt.h  cartesio_imp_cntrl_ros_rt.h  cartesio_imp_cntrl_rt.h
src/xbot2_imp_cntrl/src/: bypass_dsp.cpp  cartesio_ell_config_rt.cpp  cartesio_ell_rt.cpp  cartesio_elliptical_rt.cpp  cartesio_imp_cntrl_ros_rt.cpp  cartesio_imp_cntrl_rt.cpp
src/xbot2_plugins/xbot2_contact_est/: CMakeLists.txt
src/xbot2_plugins/xbot2_contact_est/include/: contact_est_rt.h
src/xbot2_plugins/xbot2_contact_est/src/: contact_est_rt.cpp
src/xbot2_plugins/xbot2_energy_rec/: CMakeLists.txt
src/xbot2_plugins/xbot2_energy_rec/include/: base_est_rt.h  bt_rt.h  bus_power_rt.h  cart_imp_cntrl_rt.h  contact_est_rt.h  idler_rt.h  impact_detector_rt.h  iq_model_calib_rt.h  jump_replayer_rt.h  plugins_manager_rt.h  plugins_starter_rt.h  temp_monitor_rt.h  timer_rt.h
src/xbot2_plugins/xbot2_energy_rec/include/actions/: start_plugins.h
src/xbot2_plugins/xbot2_energy_rec/include/conditions/: are_plugins_running.h
src/xbot2_plugins/xbot2_energy_rec/src/: base_est_rt.cpp  bt_rt.cpp  bus_power_rt.cpp  cart_imp_cntrl_rt.cpp  contact_est_rt.cpp  idler_rt.cpp  impact_detector_rt.cpp  iq_model_calib_rt.cpp  jump_replayer_rt.cpp  plugins_manager_rt.cpp  plugins_starter_rt.cpp  start_jump_replayer.cpp  temp_monitor_rt.cpp  timer_rt.cpp  utils_defs.hpp
src/xbot2_plugins/xbot2_energy_rec/src/actions/: always_running.cpp  always_running.h  custom_actions.h  go2takeoff_config.cpp  go2takeoff_config.h  perform_takeoff.cpp  perform_takeoff.h  ramp_jnt_imp.cpp  ramp_jnt_imp.h  restart_jump_sequence.cpp  restart_jump_sequence.h  set2idle.cpp  set2idle.h  set2safety_stop.cpp  set2safety_stop.h  start_plugins.cpp  start_plugins.h  stop_plugins.cpp  stop_plugins.h  wait_for_cooling.cpp  wait_for_cooling.h
src/xbot2_plugins/xbot2_energy_rec/src/conditions/: are_plugins_closed.cpp  are_plugins_closed.h  are_plugins_running.cpp  are_plugins_running.h  custom_conditions.h  is_idle.cpp  is_idle.h  is_joint_device_active.cpp  is_joint_device_active.h  is_safety_stop.cpp  is_safety_stop.h  jnt_imp_ramped.cpp  jnt_imp_ramped.h  pause_expired.cpp  pause_expired.h  recov_energy_reached.cpp  recov_energy_reached.h  takeoff_performed.cpp  takeoff_performed.h  takeoff_reached.cpp  takeoff_reached.h  temperature_ok.cpp  temperature_ok.h
src/xbot2_plugins/xbot2_grav_comp/: CMakeLists.txt
src/xbot2_plugins/xbot2_grav_comp/include/: grav_comp_cart_rt.h
src/xbot2_plugins/xbot2_grav_comp/src/: grav_comp_cart_rt.cpp
src/xbot2_plugins/xbot2_imp_cntrl/: CMakeLists.txt
src/xbot2_plugins/xbot2_imp_cntrl/include/: bypass_dsp.h  cartesio_ell_rt.h
src/xbot2_plugins/xbot2_imp_cntrl/src/: bypass_dsp.cpp  cartesio_ell_rt.cpp
src/xbot2_plugins/xbot2_iq_model_calib/: CMakeLists.txt
src/xbot2_plugins/xbot2_iq_model_calib/include/: iq_model_calib.h  iq_model_calib_rt.h
src/xbot2_plugins/xbot2_iq_model_calib/src/: calib_utils.cpp  calib_utils.cpp.autosave  calib_utils.hpp  iq_model_calib.cpp  iq_model_calib_rt.cpp  spline.h  utils.cpp  utils.hpp
src/xbot2_plugins/xbot2_jump/: CMakeLists.txt
src/xbot2_plugins/xbot2_jump/include/: mat_replayer_rt.h  plugin_utils.h
src/xbot2_plugins/xbot2_jump/src/: contact_est.cpp  contact_est.hpp  contact_est_utils.cpp  contact_est_utils.hpp  cyclic_jump_triggerer.cpp  mat_replayer_rt.cpp  plugin_utils.cpp  plugin_utils.hpp
(+367 files in other folders)
